# git-archeologist

./: .gitignore  README.md  list_models.py  main.py  pyproject.toml  server.py  test_server.py
.github/workflows/: python-tests.yml  ython-tests.yml
docs/: process_demonstration.md  sensor_gui_evolution.md
docs/artifacts/: sensor_logic_briefing.md
