[project]
name = "git-archeologist"
version = "0.1.0"
description = "MCP Server for Semantic Git Archaeology using Gemini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",            # Core MCP protocol
    "fastmcp>=0.1.0",             # Simplifies server implementation
    "GitPython>=3.1.43",          # Robust library for Git interaction
    "google-generativeai>=0.8.0", # Connection to Gemini API
    "python-dotenv>=1.0.1",       # Secure API Key management
    "google-genai>=1.56.0",
    "pytest>=9.0.2",
]

[tool.uv]
managed = true